--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -34,6 +34,26 @@
      <string>15:00</string>
     </property>
    </widget>
+   <widget class="QWidget" name="camera1Wdgt" native="true">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>571</width>
+      <height>341</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QWidget" name="camera2Wdgt" native="true">
+    <property name="geometry">
+     <rect>
+      <x>570</x>
+      <y>0</y>
+      <width>231</width>
+      <height>151</height>
+     </rect>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
