--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>1200</width>
+    <height>900</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,8 +17,8 @@
    <widget class="QLabel" name="lblTimer">
     <property name="geometry">
      <rect>
-      <x>720</x>
-      <y>520</y>
+      <x>1120</x>
+      <y>810</y>
       <width>81</width>
       <height>41</height>
      </rect>
@@ -29,6 +29,9 @@
       <weight>75</weight>
       <bold>true</bold>
      </font>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
     </property>
     <property name="text">
      <string>15:00</string>
@@ -54,13 +57,27 @@
      </rect>
     </property>
    </widget>
+   <widget class="QWidget" name="camera3Wdgt" native="true">
+    <property name="geometry">
+     <rect>
+      <x>570</x>
+      <y>150</y>
+      <width>231</width>
+      <height>151</height>
+     </rect>
+    </property>
+   </widget>
+   <zorder>camera2Wdgt</zorder>
+   <zorder>camera1Wdgt</zorder>
+   <zorder>lblTimer</zorder>
+   <zorder>camera3Wdgt</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>1200</width>
      <height>22</height>
     </rect>
    </property>
